1.7.5.dev0
 * #604: Fix traceback when a configuration section is present but lacking any options.
 * #607: Clarify examples in include merging and deep merging documentation.
 * #611: Fix "data" consistency check to support "check_last" and consistency "prefix" options.

1.7.4
 * #596: Fix special file detection erroring when broken symlinks are encountered.
 * #597, #598: Fix regression in which "check" action errored on certain systems ("Cannot determine
   Borg repository ID").

1.7.3
 * #357: Add "break-lock" action for removing any repository and cache locks leftover from Borg
   aborting.
 * #360: To prevent Borg hangs, unconditionally delete stale named pipes before dumping databases.
 * #587: When database hooks are enabled, auto-exclude special files from a "create" action to
   prevent Borg from hanging. You can override/prevent this behavior by explicitly setting the
   "read_special" option to true.
 * #587: Warn when ignoring a configured "read_special" value of false, as true is needed when
   database hooks are enabled.
 * #589: Update sample systemd service file to allow system "idle" (e.g. a video monitor turning
   off) while borgmatic is running.
 * #590: Fix for potential data loss (data not getting backed up) when the "patterns_from" option
   was used with "source_directories" (or the "~/.borgmatic" path existed, which got injected into
   "source_directories" implicitly). The fix is for borgmatic to convert "source_directories" into
   patterns whenever "patterns_from" is used, working around a Borg bug:
   https://github.com/borgbackup/borg/issues/6994
 * #590: In "borgmatic create --list" output, display which files get excluded from the backup due
   to patterns or excludes.
 * #591: Add support for Borg 2's "--match-archives" flag. This replaces "--glob-archives", which
   borgmatic now treats as an alias for "--match-archives". But note that the two flags have
   slightly different syntax. See the Borg 2 changelog for more information: